tests/reference/ast-end_function_name_not_match-92ee1a1.stderr
syntax error: End function name does not match function name
 --> tests/errors/end_function_name_not_match.f90:1:1 - 6:24
  |
1 |    real function square(x)
  |    ^^^^^^^^^^^^^^^^^^^^^^^...
...
  |
6 |    end function square_int
  | ...^^^^^^^^^^^^^^^^^^^^^^^^ 
